--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="%PUBLIC_URL%/video-camera-icon.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+          integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+          crossorigin="" />
+
     <title>Infi | Security cameras Utrecht</title>
   </head>
   <body>
